--- a/.github/workflows/extract_links.yml
+++ b/.github/workflows/extract_links.yml
@@ -3,65 +3,55 @@ name: Extract Download Links
 on:
   push:
     branches:
-      - main  # 当 push 到 main 分支时触发
-  workflow_dispatch: # 允许手动触发工作流
+      - main
+  workflow_dispatch:
 
 jobs:
   extract-links:
-    runs-on: ubuntu-latest # 在最新的 Ubuntu 虚拟机上运行
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4 # 检出你的代码
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x' # 指定 Python 版本
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium requests
+        pip install selenium requests webdriver-manager
 
-    - name: Install Google Chrome and ChromeDriver
+    - name: Install Google Chrome
       run: |
-        # 安装 Chrome
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
 
-        # 下载并安装 ChromeDriver
-        # 获取 Chrome 版本号
-        CHROME_VERSION=$(google-chrome --version | grep -oP '\d+' | head -n1)
-        # 根据 Chrome 版本下载对应的 ChromeDriver
-        # 注意：这里的版本匹配可能需要根据实际情况调整。
-        # 建议使用 chromedriver-autoinstaller 或 webdriver-manager 库来自动管理版本
-        # 或者手动查找最新的稳定版本。
-        # For example, if CHROME_VERSION is 120, you might need to look for 120.x.x.x
-        # For simplicity, we'll download a common version, but this can be brittle.
-        # A more robust solution involves checking the latest compatible version.
-        
-        # Using webdriver-manager for robustness
-        pip install webdriver-manager
-        python -c "from webdriver_manager.chrome import ChromeDriverManager; ChromeDriverManager().install()"
-        # This command will download and place chromedriver in a known location,
-        # typically ~/.wdm/drivers/chromedriver/linux64/version/chromedriver
-        # We need to find this path or ensure it's in PATH.
-        
-        # For now, let's assume it's installed to /usr/local/bin or similar for simplicity
-        # If using webdriver-manager, you'd specify the path in your Python script.
-        
-        # Alternatively, if you want a more manual approach (less recommended due to version issues):
-        # CHROME_DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}" | tr -d '\n')
-        # wget -N https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip -P ~/
-        # unzip ~/chromedriver_linux64.zip -d ~/
-        # rm ~/chromedriver_linux64.zip
-        # sudo mv ~/chromedriver /usr/local/bin/chromedriver
-        # sudo chmod +x /usr/local/bin/chromedriver
-
-    - name: Run Python script
+    - name: Run Python script to extract links
       run: |
-        python your_script_name.py # 替换为你的 Python 脚本文件名
-      env:
-        # 可以设置环境变量，例如 WebDriver 的路径
-        CHROMEDRIVER_PATH: $(python -c "from webdriver_manager.chrome import ChromeDriverManager; print(ChromeDriverManager().install())")
+        # 这一步会返回 ChromeDriver 的安装路径，并将其设置为环境变量
+        export CHROMEDRIVER_PATH=$(python -c "from webdriver_manager.chrome import ChromeDriverManager; print(ChromeDriverManager().install())")
+        # 运行你的 Python 脚本
+        python extract_radio_links.py
+
+    - name: Upload links.txt artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: extracted-links
+        path: links.txt
+        retention-days: 7
+
+```
+
+**确认你的文件结构：**
+
+请确保你的 GitHub 仓库的根目录包含以下两个文件：
+
+```
+your-repo-name/
+├── .github/
+│   └── workflows/
+│       └── extract_links.yml
+└── extract_radio_links.py  # 你的 Python 脚本
