--- a/.github/workflows/extract_links.yml
+++ b/.github/workflows/extract_links.yml
@@ -42,3 +42,11 @@ jobs:
         name: extracted-links
         path: links.txt
         retention-days: 7
+        python extract_radio_links.py
+
+    - name: Upload links.txt artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: extracted-links
+        path: links.txt
+        retention-days: 7
